<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.diegosalva.contactoactivity.ConfirmarDatos">

    <TextView
        android:id="@+id/tvNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreCompleto"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="textCapSentences"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textCapSentences"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcionContacto"
        android:inputType="textCapSentences"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/bEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bEditar"
        android:layout_marginTop="10dp"
        />

</LinearLayout>


