<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
tools:context="com.example.diegosalva.contactoactivity.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreCompleto"
                android:inputType="textCapSentences"/>

            <TextView
                android:id="@+id/tvFechaPut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:inputType="number"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="0dp"
                android:id="@+id/dpFecha"

                ></DatePicker>

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcionContacto"
                android:inputType="textCapSentences"/>
            <Button
                android:id="@+id/bSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bSiguiente"

                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
